force-app/main/default/objects/sugati__FormulaSV__c/sugati__FormulaSV__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Formula Static Values</label>
</CustomObject>