force-app/main/default/objects/sugati__FormulaSV__c/fields/sugati__Created_to_65th_c__c.field-meta.xml
<CustomField>
    <fullName>sugati__Created_to_65th_c__c</fullName>
    <label>Created_to_65th65</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>