force-app/main/default/objects/sugati__FormulaSV__c/fields/sugati__O_Agent_Commission_Due_Date10__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Agent_Commission_Due_Date10__c</fullName>
    <label>O_Agent_Commission_Due_Date10</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>