force-app/main/default/objects/sugati__FormulaSV__c/fields/sugati__O_Deposit_Due_Date70__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Deposit_Due_Date70__c</fullName>
    <label>O_Deposit_Due_Date70</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>