force-app/main/default/objects/sugati__FormulaSV__c/fields/sugati__O_Due_Date60__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Due_Date60__c</fullName>
    <label>O_Due_Date60</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>