force-app/main/default/objects/sugati__FormulaSV__c/fields/sugati__Sell_Round_Up__c.field-meta.xml
<CustomField>
    <fullName>sugati__Sell_Round_Up__c</fullName>
    <label>Sell Round Up</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>